imports nav.css to style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @import "reset.css";
 @import "general.css";
+@import "nav.css";
 @import "header.css";
 @import "search-bar.css";
 @import "usage.css";
