updates color variable

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -9,6 +9,7 @@
   --color-lightgray: #d2cecf;
   --color-salmon: #e27f65;
   --color-darkgray: #98a4a5;
+  --color-darkergray: #202020;
   --color-black: #000;
   --color-darkslategray: #444;
   --color-sienna: #9b3e34;
