--- a/assets/css/info.css
+++ b/assets/css/info.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1em;
+  padding: 1em 2.5em;
 }
 
 .info:first-of-type {
