adds style for anchor tags

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -26,3 +26,12 @@ h3 {
   font-weight: 600;
   text-transform: uppercase;
 }
+
+a {
+  color: var(--color-white);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--color-cornflowerblue);
+}
