--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -1,6 +1,5 @@
 .details {
   font-family: var(--font-family-tertiary);
-  width: 100%;
   margin: 0 auto;
 }
 
@@ -8,7 +7,6 @@
 h2 {
   color: var(--color-sienna);
   font-weight: bolder;
-  font-size: 16px;
   text-transform: uppercase;
   padding: 20px 0 10px;
 }
@@ -17,19 +15,9 @@ h2 {
   margin: 20px;
 }
 
-.image figure {
-  width: 100%;
-}
-
-.image figure img {
-  width: 100%;
-  height: 40vh;
-}
-
 .image figure figcaption {
   font-weight: bolder;
   padding: 2vh 0;
-  font-size: 16px;
 }
 
 .image button {
@@ -43,25 +31,28 @@ h2 {
 
 table {
   border-collapse: collapse;
-  width: 100%;
-  font-size: 1.6vw;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 20px;
 }
 
 th {
   text-transform: uppercase;
   color: var(--color-salmon);
-  font-weight: 700;
+  font-weight: 550;
 }
 
 td,
 th {
-  border: 1px solid var(--color-salmon);
   text-align: left;
-  padding: 1.2vw;
+  padding: 2%;
 }
 
-tr:nth-child(even) {
-  background-color: var(--color-salmon);
+td {
+  color: var(--color-steelblue);
+}
+
+.text-black {
+  color: var(--color-black);
 }
 
 .contacts {
@@ -79,7 +70,6 @@ tr:nth-child(even) {
 }
 
 iframe {
-  width: 100%;
   border: 0;
 }
 
@@ -90,27 +80,12 @@ iframe {
 .about-dest p {
   line-height: 1.5;
   text-align: justify;
-  font-size: 14px;
-}
-
-@media only screen and (min-width: 768px) {
-  .about-dest p {
-    font-size: 20px;
-  }
-
-  .image figure figcaption {
-    font-size: 18px;
-  }
 }
 
 @media only screen and (min-width: 1024px) {
-  .image {
-    width: 80%;
-    margin: 20px auto;
-  }
-
+  .image,
   .about-dest {
     width: 80%;
-    margin: auto;
+    margin: 20px auto;
   }
 }
