--- a/assets/css/filter.css
+++ b/assets/css/filter.css
@@ -1,20 +1,21 @@
 .filter {
+  flex-direction: column;
+  flex-wrap: wrap;
   background-color: var(--color-whitesmoke);
   font-family: var(--font-family-secondary);
   margin-top: 5vh;
 }
 
-.filter h4 {
+.filter h1 {
   font-weight: 600;
-  font-size: 14px;
   text-align: left;
   padding: 20px;
 }
 
 .filter form {
-  display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-wrap: wrap;
   padding: 10px 0 30px 20px;
 }
 
@@ -22,13 +23,11 @@
   text-transform: uppercase;
   font-weight: bolder;
   padding-right: 1em;
-  font-size: 14px;
   margin-bottom: 3px;
 }
 
 fieldset {
-  display: flex;
-  align-items: center;
+  align-items: flex-end;
   flex-wrap: wrap;
   margin-bottom: 10px;
 }
@@ -37,7 +36,7 @@ fieldset input,
 fieldset select {
   border: 1px solid var(--color-lightgray);
   border-radius: 2px;
-  padding: 7px;
+  padding: 6px;
 }
 
 .buttons {
@@ -50,6 +49,7 @@ fieldset select {
   border: 0;
   border-radius: 2px;
   padding: 8px;
+  margin: 0 5px;
 }
 
 .buttons button:first-of-type {
@@ -62,14 +62,14 @@ fieldset select {
 }
 
 @media only screen and (min-width: 768px) {
-  .filter h4 {
+  .filter h1 {
     text-align: center;
   }
 
   .filter form {
     flex-direction: row;
+    justify-content: center;
     align-items: flex-end;
-    width: 100%;
   }
 
   fieldset {
@@ -80,12 +80,7 @@ fieldset select {
   }
 
   .buttons {
-    display: flex;
     align-items: flex-end;
     padding: 10px;
-  }
-
-  .buttons button {
-    margin: 0 10px;
   }
 }
