--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -11,14 +11,11 @@
   width: 90%;
   margin: 0 auto 20px;
   transition: all 0.5s ease-in-out;
+  position: relative;
 }
 
 .card:hover {
   transform: scale(0.95);
-}
-
-.card-header {
-  position: relative;
 }
 
 .card-header h3 {
@@ -26,46 +23,47 @@
   position: absolute;
   color: var(--color-black);
   bottom: 0;
-  font-size: 1.3vw;
   left: 0;
   padding: 10px 0;
   text-align: center;
-  width: 100%;
 }
 
-.card-header img {
-  width: 100%;
-}
-
-.card-body {
-  display: grid;
-  grid-template-columns: 1fr;
-  align-items: end;
+.card-header {
+  position: relative;
 }
 
 .card-text {
   background-color: var(--color-white);
   font-weight: 550;
-  font-size: 1.3vw;
   text-align: center;
   line-height: 1.7;
-  padding: 10px 0;
+  padding: 10px 0 30px;
 }
 
-.card-body button {
+.card button {
   border: 0;
   background-color: var(--color-indianred);
   color: var(--color-white);
   cursor: pointer;
   font-weight: 700;
-  font-size: 1.3vw;
   padding: 8px;
-  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.d-none {
+  display: none;
 }
 
 @media only screen and (min-width: 768px) {
   .results {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .results {
     grid-template-columns: repeat(4, 1fr);
   }
 }
