--- a/assets/css/search-bar.css
+++ b/assets/css/search-bar.css
@@ -1,5 +1,4 @@
 .search-bar {
-  display: flex;
   background: linear-gradient(var(--color-black), transparent, var(--color-black)), url(../images/banner.jpg) no-repeat;
   background-size: cover;
   font-family: var(--font-family-tertiary);
@@ -7,7 +6,6 @@
 }
 
 .container {
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -15,9 +13,9 @@
   margin: auto;
 }
 
-.container h3 {
-  text-align: center;
-  font-size: 2vw;
+.container h1 {
+  color: var(--color-white);
+  font-size: 1.6rem;
 }
 
 .search-form {
@@ -25,17 +23,12 @@
   border-radius: 8px;
   margin: 2vw;
   padding: 4vw;
-  width: 100%;
 }
 
 .search-form label {
   color: var(--color-darkslategray);
   font-weight: 600;
   text-transform: uppercase;
-}
-
-.search-form form {
-  width: 100%;
 }
 
 .input {
@@ -45,7 +38,6 @@
   text-transform: uppercase;
   padding: 1.2vw 0 1.2vw 1.2vw;
   margin: 5px 0;
-  width: 100%;
 }
 
 .btn-form {
@@ -56,7 +48,6 @@
   font-weight: 600;
   text-transform: uppercase;
   padding: 1.2vw 0;
-  width: 100%;
 }
 
 .btn-instruction {
@@ -64,11 +55,10 @@
   border: 0;
   border-radius: 2px;
   color: var(--color-darkslategray);
-  font-size: 2vw;
-  font-weight: 700;
+  font-weight: 550;
+  font-size: 1.3rem;
   margin-top: 10vh;
   padding: 1vw;
-  width: 15vw;
 }
 
 @media only screen and (min-width: 768px) {
